no pude con el icono

--- a/javascript udemy 43/ejercices/aplicacionPresupuesto/css/estilos.css
+++ b/javascript udemy 43/ejercices/aplicacionPresupuesto/css/estilos.css
@@ -236,7 +236,10 @@ h2 {
 
 
 .elemento_eliminar {
-    float: left;
+    float: right;
+    /* display:block;
+    size: 10px;
+    background: #000; */
 }
 
 .elemento_eliminar--btn {
