--- a/javascript udemy 43/ejercices/colorpicker/estilos/estilos.css
+++ b/javascript udemy 43/ejercices/colorpicker/estilos/estilos.css
@@ -11,9 +11,14 @@ h2 {
     text-align: center;
 }
 .salida {
+    
     text-transform: uppercase;
     text-align: center;
     font-weight: 900;
+    width: 30%;
+    height: 7rem;
+    margin: 1.5rem auto;
+    border: 1px solid #000;
 }
 .color-div{
     text-align: center;
