--- a/full_stack_Developer_Platzy/Clase1/src/style.css
+++ b/full_stack_Developer_Platzy/Clase1/src/style.css
@@ -1,9 +1,9 @@
 :root {
     --white :#ffffff;
     --black : #000000;
-    --very-light-pink : #C7C7C7;
-    --test-input-field: #393030;
-    --hospital--green : #acd9b2;
+    --very-light-pink : #aeaeae;
+    --text-input-field: #a4a2a2;
+    --hospital--green : #70a877;
     --sm:14px;
     --md:16px;
     --lg:18px;
@@ -19,16 +19,54 @@ body {
     display: grid;
     place-items: center;
 }
-.form-conatiner {
+.login-buttom {
+    margin-top: 12px;
+    margin-bottom: 30px;
+}
+
+.form-container {
     display:grid;
     grid-template-rows: auto 1fr auto;
     width:300px;
+    justify-items: center;
 }
 .logo{
     width: 150px;
     margin-bottom: 48px;
     justify-self: center;
     display:none;
+}
+.email-image{
+    width:132px;
+    height:132px;
+    border-radius: 50%;
+    background: var(--very-light-pink);
+    display:flex;
+    justify-content: center;
+    margin-bottom: 24px;
+    /* align-items: center; */
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+.email-image img {
+    width:80px;
+}
+.resend{
+    font-size:var(--sm) ;
+}
+.resend span {
+    color:var(--very-light-pink);
+}
+.resend a {
+    text-decoration: none;
+    color: var(--hospital--green);
+}
+@media (max-width:640px) {
+    .logo {
+        display: block;
+    }
 }
 .title {
     font-size: var(--lg);
