resuletas rutas parcialmente

--- a/appCrud/front/src/styles/index.css
+++ b/appCrud/front/src/styles/index.css
@@ -1,31 +1,42 @@
 .home {
-    height: 100vh;
-}.banner {
-    background-image: url(https://i.pinimg.com/564x/8c/cb/48/8ccb48330a7757a44b4f093b27772efd.jpg);
-    height: 100vh;
-    background-repeat: no-repeat;
-    background-size:100% 100%;
-    background-position: center center;
-    flex-direction: column;
-    
-} 
-.banner h2  {
-    font-family: 'Dokdo', cursive;
-    font-size: 52px;
-    color: aliceblue;
+  height: 100vh;
 }
-.banner p{
-    font-family: 'Dokdo', cursive;
-    color: aliceblue;
-    font-size: 32px;
+.banner {
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  background-position: center center;
+  /* background-image: url(https://i.pinimg.com/564x/8c/cb/48/8ccb48330a7757a44b4f093b27772efd.jpg); */
+  flex-direction: column;
+  background: rgb(20, 23, 33);
+  background: rgb(20,23,33);
+background: linear-gradient(185deg, rgba(20,23,33,1) 18%, rgba(52,52,52,1) 81%);
+}
+.banner h2 {
+  font-family: "Dokdo", cursive;
+  font-size: 52px;
+  color: aliceblue;
+}
+.banner p {
+  font-family: "Dokdo", cursive;
+  color: aliceblue;
+  font-size: 32px;
 }
 
 .rounded-circle {
-    width: 150px;
+  width: 150px;
 }
 .modal-dialog {
-    width: 30%;
-    padding: 1em;
-    margin: 12px;
-    
+  width: 30%;
+  padding: 1em;
+  margin: 12px;
+}
+
+.trg-person {
+    background: rgb(20,23,33);
+background: linear-gradient(185deg, rgba(20,23,33,1) 18%, rgba(52,52,52,0.7595413165266106) 81%);
+color:white;
+}
+.trg-person img {
+    border-color:1px white ;
 }
